# union-mcp

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE_V2.md  README.md  TODOS.md  app.py  app_resources.py  app_v1.py  app_v2.py  app_v2_tasks.py  debugging.py  demo.md  package.json  pyproject.toml  roadmap.md  test_mcp.py  test_resources.py  test_reuse.py  test_task.py
.cursor/rules/: union-mcp-v1.mdc  union-mcp-v2.mdc  union-mcp.mdc
.flyte/: config-demo.yaml  config.yaml
examples/: oom_fix.py  remote.py  remote_v1.py  server.py  workflows.py
examples/union_mcp_server/: app.py  server.py
examples/v2/: arxiv_tts.py  hyperopt.py  imdb_embeddings.py  oom_fix.py  remote.py  script.py  server.py  sum_of_squares.py  timeseries_visualization.py  workflows.py
examples/v2/doc_classification/: 01_feature_engineering.py  02_train_classifier.py  02_train_classifier_simple.py  03_full_pipeline.py  03_full_pipeline_simple.py  04_deterministic_reruns.py
guides/: deployment_v1.md  deployment_v2.md  mcp_configuration.md
union_mcp/: resources.py  server.py
union_mcp/common/: auth.py
union_mcp/v1/: __init__.py  resources.py  server.py
union_mcp/v2/: __init__.py  auth.py  resources.py  server.py
