[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "union-mcp"
version = "0.1.0"
description = "An MCP server to connect to Union resources and services."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Niels Bantilan" }
]
dependencies = [
    "union",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
