[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "union-mcp"
version = "0.1.0"
description = "An MCP server to connect to Union resources and services."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Niels Bantilan" }
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic",
]

[project.optional-dependencies]
v1 = [
    "flytekit>=1.16.4",
    "union>=0.1.194",
]
v2 = [
    "flyte>=2.0.0b22",
]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
include = ["union_mcp*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
